content now displayed in index

--- a/Lab-28/Views/Home/Index.cshtml
+++ b/Lab-28/Views/Home/Index.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-    <div class="text-center">
-        <h1 class="display-4">Lab-28</h1>
-        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="DisplayCards">Draw Five Cards</a>
-    </div>
+@foreach (var card in Model.cards)
+{
+    <p>@card.value of @card.suit.</p>
+    <img src="@card.image">
+}
